--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,24 +5,20 @@ color: black
 style: center
 ---
 
-### *whoa, hey an open-source*
-{: .text-purple}
+The **vcdMaker** is an open and free application for translating text log files into the VCD (Variable Change Dump) format files. It is supposed to help engineers to debug their applications and systems by visualising their behavior.
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
-  <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
-</span>
+We appreciate your feedback. Share your ideas, success stories and comments via <a href="mailto:vcdmaker@mail.com">e-mail</a>.
 
-# single-page jekyll theme
-{: .text-purple}
+<center>
+<script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+<script type="IN/Share" data-url="vcdmaker.org" data-counter="right"></script>     
 
-
-…it's focused on delivering information quickly, easily, configurably, and stylishly!
-
-Want to make a single-page site to show off something cool? Go [fork me on github!](https://github.com/t413/SinglePaged)
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://vcdmaker.org" data-via="vcdMaker">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</center>
 
 <span id="forkongithub">
-  <a href="{{ site.source_link }}" class="bg-blue">
-    Fork me on GitHub
+  <a href="https://twitter.com/vcdMaker" class="bg-blue">
+    Follow us on Twitter
   </a>
 </span>
