--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 style: center
 ---
 
-The **vcdMaker** is an open and free application for translating text log files into the VCD (Variable Change Dump) format files. It is supposed to help engineers to debug their applications and systems by visualising their behavior.
+The **vcdMaker** is an open and free application for translating text log files into the VCD (Variable Change Dump) format files. It is supposed to help engineers to debug their applications and systems by visualizing their behavior.
 
 We appreciate your feedback. Share your ideas, success stories and comments via <a href="mailto:vcdmaker@mail.com">e-mail</a>.
 
