--- a/_posts/2000-01-03-download.md
+++ b/_posts/2000-01-03-download.md
@@ -7,4 +7,4 @@ fa-icon: download
 
 Windows [Installer!](https://github.com/WojciechRynczuk/vcdMaker/releases/download/v1.0.1/vcdMakerInstaller.msi) - The latest Windows installation package. It updates the user's path so as the application could be invoked from anywhere. The application can be fully removed during the uninstallation process.
 
-[ZipArchive!](https://github.com/WojciechRynczuk/vcdMaker/releases/download/v1.0.1/vcdMaker.zip) - The archived verion of the application for those who do not like installation packages.
+[ZipArchive!](https://github.com/WojciechRynczuk/vcdMaker/releases/download/v1.0.1/vcdMaker.zip) - The archived version of the application for those who do not like installation packages.
