--- a/_posts/2000-01-06-about.md
+++ b/_posts/2000-01-06-about.md
@@ -9,7 +9,7 @@ As the experience shows, no matter what the industry is and what the target appl
 
 Of course logs are not usually created in the format used by **vcdMaker**. Provided, they contain time stamps, variables' names and their values they can be easily transformed to the **vcdMaker** format. Short Perl, Python or awk script shall suffice.
 
-It is beneficial to have the insight into the system at the every stage of its development, not only while hunting for bugs. Quite often people rely on assumptions. We all have heard statements like these: *'This library will never return values out of range.'* or *'I would be surprised to see this interrupt happening often.'*. Guess what? It turns out that it is not so uncommon to see the library returning unexpected values and the interrupt handler is invoked every 10 ms. Having means to see those things in advance might improve one's design yet before the bugs sneak out.
+It is beneficial to have the insight into the system at the every stage of its development, not only while hunting for bugs. Quite often people rely on assumptions. We all have heard statements like these: *'This library will never return values out of range.'* or *'I would be surprised to see this interrupt happening often.'*. Guess what? It turns out that it is not so uncommon to see the library returning unexpected values and the interrupt handler is invoked every 350 us. Having means to see those things in advance might improve one's design yet before the bugs sneak out.
 
 Enjoy it.
 
