--- a/_posts/2000-01-06-about.md
+++ b/_posts/2000-01-06-about.md
@@ -7,7 +7,7 @@ fa-icon: info-circle
 
 As the experience shows, no matter what the industry is and what the target application is, people tend to create log files to analyze their systems and applications. In many cases these are many megabytes files. People just read them or prepare scripts to get them analyzed automatically. The idea presented here compromises these two approaches by visualizing the log. Although the analysis is still manual the engineer is given a kind of freedom and flexibility in the system's exploration. One can easily measure time events or change the format of the displayed data.
 
-Of course logs are not usually created in the format used by **vcdMaker**. Provided, they contain time stamps, variables' names and their values they can be easily transformed to the **vcdMaker** format. Short Perl, Python or awk script shall suffice.
+Of course logs are not usually created in the format used by **vcdMaker**. Provided, they contain time stamps, variables' names and their values they can be easily transformed to the **vcdMaker** format. Short Perl, Python or awk script shall suffice and most programmers will handle it easily.
 
 It is beneficial to have the insight into the system at the every stage of its development, not only while hunting for bugs. Quite often people rely on assumptions. We all have heard statements like these: *'This library will never return values out of range.'* or *'I would be surprised to see this interrupt happening often.'*. Guess what? It turns out that it is not so uncommon to see the library returning unexpected values and the interrupt handler is invoked every 350 us. Having means to see those things in advance might improve one's design yet before the bugs sneak out.
 
